fixed alignements, clear selected samples of cluster and outlier analyses

--- a/src/client/styles/components/model-description.scss
+++ b/src/client/styles/components/model-description.scss
@@ -1,8 +1,6 @@
 .model-desc {
     .btn-expand {
-        width: 50px;
-        min-width: 50px;
-        height: 50px;
+        min-width: 10px;
         border: none;
         border-radius: 50%;
         padding: 0;
