--- a/src/client/styles/components/scatter-graph.scss
+++ b/src/client/styles/components/scatter-graph.scss
@@ -7,7 +7,7 @@
 
   &-examples {
     flex-wrap: wrap;
-    height: 75vh;
+    min-height: 400px;
   }
 
   &-item {
